# simple-vsat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  parser.cpp  parser.h  to_dimacs.cpp  to_dimacs.h
